--- a/README.me
+++ b/README.me
@@ -4,6 +4,7 @@ Printer Technician: Joey Costello(JoeyTheDev1)
 Technical Advisor: Zackaria B.
 
 Future:
+Handle edge cases: ie. During long event, pilot departs, but later reconnects with same callsign but different aircraft and flightplan. likely add logic to detect when stored callsign is airborne amd remove from list
 Expand functionality to any airport. Currently only supports KATL and KCLT
 Add GUI elements to the program
 Allow easier editing of Lat-Long points for defining geographical areas
