--- a/README.me
+++ b/README.me
@@ -1,3 +1,4 @@
+Python 3.11.3
 WIP flight progress strips for ZTL.
 Code Author: Simon Heck (Simon-Heck)
 Printer Technician: Joey Costello(JoeyTheDev1)
@@ -9,3 +10,10 @@ Expand functionality to any airport. Currently only supports KATL and KCLT
 Add GUI elements to the program
 Allow easier editing of Lat-Long points for defining geographical areas
 Add in amendment numbers and amended flightplans to strips
+
+To Run:
+Pip install the following:
+  -zebra
+  -requests
+  -zpl
+  
