--- a/README.me
+++ b/README.me
@@ -5,6 +5,8 @@ Printer Technician: Joey Costello(JoeyTheDev1)
 Technical Advisor: Zackaria B.
 
 Future:
+make read me in markdown
+sync data refresh with VATSIM data refresh cycle
 Handle edge cases: ie. During long event, pilot departs, but later reconnects with same callsign but different aircraft and flightplan. likely add logic to detect when stored callsign is airborne amd remove from list
 Expand functionality to any airport. Currently only supports KATL and KCLT
 Add GUI elements to the program
